--- a/Memes_front/index.css
+++ b/Memes_front/index.css
@@ -37,7 +37,7 @@ body {
     width: 80%;
     max-width: 1000px;
     position: absolute;
-    bottom: 3%;
+    top: 3%;
     margin: 0 auto 0 auto;
 }
 
