--- a/Memes_front/index.css
+++ b/Memes_front/index.css
@@ -34,11 +34,8 @@ body {
 }
 
 #memes_small {
-    width: 80%;
-    max-width: 1000px;
-    position: absolute;
-    top: 3%;
-    margin: 0 auto 0 auto;
+    width: 100%;
+    margin: 3% auto 0 auto;
 }
 
 .meme {
