--- a/Memes_front/index.css
+++ b/Memes_front/index.css
@@ -53,6 +53,7 @@ body {
 
 #display {
     width: 100%;
+    max-height: 40%;
     text-align: center;
     padding: 4px;
     vertical-align: middle;
