--- a/Memes_front/index.css
+++ b/Memes_front/index.css
@@ -1,10 +1,23 @@
 body {
     margin: 0;
+    background-image: url("background.jpg");
+    background-repeat: no-repeat;
+    background-color: #270600;
+    background-size: 100vw auto;
+}
+
+#content {
+    background-color: white;
+    min-height: 100%;
+    width: 80%;
+    max-width: 1300px;
+    margin: 0 auto 0 auto;
 }
 
 #search_content {
     text-align: center;
-    margin: 5vh auto 0 auto;
+    margin: 0 auto 0 auto;
+    padding-top: 5vh;
     vertical-align: bottom;
     height: 10vh;
 }
@@ -29,15 +42,16 @@ body {
 }
 
 #memes {
-    width: 80%;
+    width: 90%;
+    height: 85vh;
     max-width: 1000px;
     margin: 0 auto 0 auto;
 }
 
 #memes_small {
     width: 100%;
-    height: 25vh;
-    margin: 5vh auto 0 auto;
+    height: 20%;
+    margin: 1% auto 0 auto;
 }
 
 .meme {
@@ -55,7 +69,7 @@ body {
 
 #display {
     width: 100%;
-    height: 50vh;
+    height: calc(75% - 8px);
     text-align: center;
     padding: 4px;
     vertical-align: middle;
