--- a/Memes_front/index.css
+++ b/Memes_front/index.css
@@ -7,7 +7,7 @@ body {
 }
 
 #content {
-    background-color: white;
+    background-color: rgba(1, 1, 1, .4);
     min-height: 100%;
     width: 80%;
     max-width: 1300px;
